--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,8 @@ install:
   - pip install . --use-mirrors
   - pip install -r requirements.txt --use-mirrors
 
-script: py.test
+script: 
+  - py.test --cov .
+
+after_success:
+  - coveralls
