--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ install:
   - pip install -r requirements.txt --use-mirrors
 
 script: 
-  - py.test --cov .
+  - py.test
+  - coverage run -m py.test
 
 after_success:
   - coveralls
