--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,12 @@ before_install:
   - sudo apt-get install python-numpy python-scipy
 
 install:
-  - pip install . --use-mirrors
-  - pip install -r requirements.txt --use-mirrors
+  - pip install -e . --use-mirrors
+  - pip install -r requirements.txt --use-script
+  - pwd
 
-script: 
-  - coverage run -m py.test
+mirrors: 
+  - py.test --cov i3
 
 after_success:
   - coveralls
